# CxxPluginFramework

./: CMakeLists.txt  README.md  auto_package_vs2019_win32.bat  auto_package_vs2019_x64.bat  common.rc.in  generate_vs2019_win32.bat  generate_vs2019_x64.bat
app/: CMakeLists.txt
app/tutorial/: CMakeLists.txt  app.cc
core/: CMakeLists.txt
